--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,9 +7,11 @@ android {
         applicationId "cn.custed.app"
         minSdkVersion 15
         targetSdkVersion 25
-        versionCode 1
-        versionName "1.0"
+        //noinspection HighAppVersionCode
+        versionCode 2017041202
+        versionName "0.7.3beta"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        vectorDrawables.useSupportLibrary = true
     }
     buildTypes {
         release {
@@ -25,6 +27,9 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.android.support:appcompat-v7:25.2.0'
-    testCompile 'junit:junit:4.12'
     compile 'com.android.support:design:25.2.0'
+    compile 'com.google.zxing:core:3.3.0'
+    compile 'com.android.support:support-v4:25.2.0'
+    compile 'com.android.support:support-vector-drawable:25.2.0'
+    testCompile 'junit:junit:4.12'
 }
